--- a/kegiatan.html
+++ b/kegiatan.html
@@ -64,7 +64,7 @@
                         <div class="dropdown-content">
                             <a href="kegiatan.html#kalender">Kalender Akademik</a>
                             <a href="kegiatan.html#ppdb">PPDB</a>
-                            <a href="kegiatan.html#ekstra">Ekstrakulikuler</a>
+                            <a href="kegiatan.html#ekstra">Ekstrakurikuler</a>
                         </div>
                     </li>
                     <li class="dropdown">
@@ -150,8 +150,8 @@
     <div class="row row-spaced">
         <div style="flex-basis: 100%;">
             <span id="ekstra" style="position: relative; top: -100px;"></span>
-            <h2 class="underlined head2">Ekstrakulikuler</h2>
-            <p class="under-header">Terdapat kurang lebih 16 Ekstrakulikuler yang berada di SMK Sains Pertiwi</p>
+            <h2 class="underlined head2">Ekstrakurikuler</h2>
+            <p class="under-header">Terdapat kurang lebih 16 Ekstrakurikuler yang berada di SMK Sains Pertiwi</p>
         </div>
         <div style="flex-basis: 20%;">
             <ul style="padding-left: 15px; list-style-type: disc; text-align: left;">
