--- a/template.html
+++ b/template.html
@@ -64,7 +64,7 @@
                         <div class="dropdown-content">
                             <a href="kegiatan.html#kalender">Kalender Akademik</a>
                             <a href="kegiatan.html#ppdb">PPDB</a>
-                            <a href="kegiatan.html#ekstra">Ekstrakulikuler</a>
+                            <a href="kegiatan.html#ekstra">Ekstrakurikuler</a>
                         </div>
                     </li>
                     <li class="dropdown">
