new logo and fav icon

--- a/profil.html
+++ b/profil.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
     <script type="text/javascript" src="js/social.js"></script>
+    <link rel="icon" type="image/png" href="img/web-logo-black.png" />
 </head>
 
 <body onload="setUrl()">
@@ -101,7 +102,7 @@
             <h2 class="underlined head2">Sejarah</h2>
         </div>
         <div style="flex-basis: 30%;">
-            <img src="img/pexels-idriss-meliani-2982449.jpg" alt="" style="max-width: 100%; border-radius: 64px 64px 0px 64px;">
+            <img src="img/web-logo-color.png" alt="" style="max-width: 200px; border-radius: 64px 64px 0px 64px;">
         </div>
         <div style="flex-basis: 60%;">
             <p style="text-align: left;">SMK Sains Pertiwi merupakan salah satu Lembaga
