--- a/galeri.html
+++ b/galeri.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
     <script type="text/javascript" src="js/social.js"></script>
+    <link rel="icon" type="image/png" href="img/web-logo-black.png" />
 </head>
 
 <body onload="setUrl()">
