update video galeri

--- a/galeri.html
+++ b/galeri.html
@@ -187,13 +187,13 @@
             <h2 class="underlined head2">Galeri Video</h2>
             <div class="row" style="padding-left: 0; padding-right: 0;">
                 <div>
-                    <iframe width="100%" src="https://www.youtube.com/embed/erjAlnGV5L8"
+                    <iframe width="100%" src="https://www.youtube.com/embed/Byl3TGbwdy0"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div>
-                    <iframe width="100%" src="https://www.youtube.com/embed/lkvwuBRxuzs"
+                    <iframe width="100%" src="https://www.youtube.com/embed/2ONkWbY7VE4"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
