--- a/kelompok1.html
+++ b/kelompok1.html
@@ -97,25 +97,29 @@
             <h3>Kelas 12.2B.31</h3>
             <h3>UBSI Dewi Sartika</h3>
             <p style="text-align: left;">
-                <ul style="text-align: center;">
-                    <li>Kossa Ridho Utomo / 12210472</li>
-                    <li>Esha Indra S / 12210408</li>
-                    <li>Dwi Ariyani / 12211496</li>
-                    <li>Hearly Ramadhan / 12211509</li>
-                    <li>Riki Ardhianto / 12211547</li>
-                </ul>
+            <ul style="text-align: center;">
+                <li>Kossa Ridho Utomo / 12210472</li>
+                <li>Esha Indra S / 12210408</li>
+                <li>Dwi Ariyani / 12211496</li>
+                <li>Hearly Ramadhan / 12211509</li>
+                <li>Riki Ardhianto / 12211547</li>
+            </ul>
             </p>
         </div>
         <div>
-            <p>Gambar pada web ini diambil dari <a href="https://www.pexels.com/">pexels.com</a> dan <a href="https://generated.photos/">generated.photos</a>.<br>Hak cipta ada pada kreator.</p>
+            <p>Gambar pada web ini diambil dari <a href="https://www.pexels.com/">pexels.com</a> dan <a
+                    href="https://generated.photos/">generated.photos</a>.<br>
+               Video pada menu galeri menggunakan video dari Free HD Videos - No Copyright <a href="https://bit.ly/2CbkIcQ">https://bit.ly/2CbkIcQ</a> dan <a href="https://www.youtube.com/watch?v=Byl3TGbwdy0">https://www.youtube.com/watch?v=Byl3TGbwdy0</a> 
+                    <br>Hak cipta ada pada kreator.</p>
         </div>
     </div>
     <div class="icon-bar">
-        <a href="#" class="social" style="background-color: white; padding: 5px; color: black;"><span style="font-size: 10pt;">share</span></a>
+        <a href="#" class="social" style="background-color: white; padding: 5px; color: black;"><span
+                style="font-size: 10pt;">share</span></a>
         <a href="#" class="social" target="_blank" id="facebook"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="#" class="social" target="_blank" id="twitter"><i class="fa-brands fa-twitter"></i></a>
         <a href="#" class="social" target="_blank" id="whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
-      </div>
+    </div>
     <div class="row footer">
         <div style="flex-basis: 30%;">
             <img src="img/web-logo-white.png" alt="Logo SMK Sains Pertiwi" width="60px">
@@ -152,7 +156,8 @@
             </ul>
         </div>
         <div style="flex-basis: 100%;">
-            <p style="text-align: center;">Dibuat oleh <a href="kelompok1.html" style="color: #F18F01;">Kelompok 1</a> Web Programming Kelas 12.2B.31.</p>
+            <p style="text-align: center;">Dibuat oleh <a href="kelompok1.html" style="color: #F18F01;">Kelompok 1</a>
+                Web Programming Kelas 12.2B.31.</p>
         </div>
     </div>
 </body>
