--- a/kegiatan.html
+++ b/kegiatan.html
@@ -102,11 +102,11 @@
             <h2 class="underlined head2">Kalender Akademik</h2>
         </div>
         <div style="flex-basis: 20%;">
-            <a href="#img1"><img src="img/kalender-akademik.png" alt="" class="img-box">
+            <a href="#img1"><img src="img/kalender-akademik.jpg" alt="" class="img-box">
                 <p style="margin-bottom: 0px; text-align: center;">Kalender Akademik Tahun Pelajaran 2021/2022</p>
             </a>
             <a href="#menu" class="lightbox" id="img1">
-                <span style="background-image: url('img/kalender-akademik.png')"></span>
+                <span style="background-image: url('img/kalender-akademik.jpg')"></span>
             </a>
         </div>
 
