fix list visibility

--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
                 <li><b>8 Januari - 8 Februari 2022</b> : Pengisian PDSS SNMPTN</li>
                 <li><b>1 Februari 2022</b> : Libur Umum (Tahun Baru Imlek 2573)</li>
                 <li><b>14-28 Februari 2022</b> : Pendaftaran SNMPTN</li>
-                <li><b>14 Februari - 17 Maret 2022</b> : Pembuatan Akun LTMPT</li>
-                <br>
+                <li style="margin-bottom: 25px;"><b>14 Februari - 17 Maret 2022</b> : Pembuatan Akun LTMPT</li>
                 <li><a href="kegiatan.html#kalender"><b>Kalender Akademik <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
@@ -146,7 +145,7 @@
         <div class="img-bottom">
             <div class="div-wrapper">
                 <img
-                    src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.png" />
+                    src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.png" alt="Murid SMK Sains Pertiwi"/>
             </div>
         </div>
         <div class="after-bottom block-dark" style="flex-basis: 25%; padding: 30px; margin-bottom: 20px;">
