--- a/kegiatan.html
+++ b/kegiatan.html
@@ -141,7 +141,7 @@
                 <li><b>15-28 Juni 2022</b><br>Pengajuan akun di laman <a
                     href="https://ppdb.jakarta.go.id/">https://ppdb.jakarta.go.id/</a>.<br>Verifikasi berkas di SMA/SMK terdekat.</li>
                 <li><b>29 Juni-01 Juli 2022</b><br>Pendaftaran dan perubahan pilihan jalur masuk<br>CPD dapat mengganti jalur
-                    pendaftaran sleama waktu ini.</li>
+                    pendaftaran selama waktu ini.</li>
                 <li><b>02-03 Juli 2022</b><br>Validasi dan evaluasi ajuan pendaftaran CPD oleh sistem</li>
                 <li><b>04 Juli 2022</b><br>Pengumuman hasil PPDB melalui laman selambat-lambatnya pukul 23.55 WIB</li>
                 <li><b>05-07 Juli 2022</b><br>Daftar ulang di Satuan Pendidikan yang dituju</li>
