--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" link rel="preload" as="style"  onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"></noscript>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"  async></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" link
+        rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    </noscript>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" async></script>
     <script type="text/javascript" src="js/social.js"></script>
     <link rel="icon" type="image/png" href="img/web-logo-black.webp" />
 </head>
@@ -99,7 +102,8 @@
                     Daftar di 8 pilihan program keahlian dengan kurikulum nasional.
                     Dapatkan kesempatan untuk mengikuti program keahlian yang sesuai dengan karakteristikmu.
                 </p>
-                <button class="button" onclick="location.href='kegiatan.html#ppdb';">Lihat Informasi PPDB <i class="fa-solid fa-circle-arrow-right"></i></button>
+                <button class="button" onclick="location.href='kegiatan.html#ppdb';">Lihat Informasi PPDB <i
+                        class="fa-solid fa-circle-arrow-right"></i></button>
             </div>
         </div>
     </div>
@@ -120,7 +124,8 @@
                 <li><b>1 Februari 2022</b> : Libur Umum (Tahun Baru Imlek 2573)</li>
                 <li><b>14-28 Februari 2022</b> : Pendaftaran SNMPTN</li>
                 <li style="margin-bottom: 25px;"><b>14 Februari - 17 Maret 2022</b> : Pembuatan Akun LTMPT</li>
-                <li><a href="kegiatan.html#kalender"><b>Kalender Akademik <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
+                <li><a href="kegiatan.html#kalender"><b>Kalender Akademik <i
+                                class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
         <div style="flex-basis: 40%;">
@@ -128,14 +133,18 @@
             <ul style="text-align:left; list-style-type: circle; padding-left: 15px;">
                 <li><a href="berita.html">Ayo Dukung Siswa Kita di Program Microsoft Young Developer</a></li>
                 <li><a href="berita.html">Kunjungan SMKN 2 Jambi</a></li>
-                <li><a href="berita.html">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains Pertiwi</a>
+                <li><a href="berita.html">Pameran Produk Kreatif Kewirausahaan dan Start Up Bisnis Siswa SMK Sains
+                        Pertiwi</a>
                 </li>
-                <li><a href="berita.html">Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat Nasional</a>
+                <li><a href="berita.html">Guru SMK Sains Pertiwi Raih Terbaik 2 Guru Dedikasi dan Inovasi SMK tingkat
+                        Nasional</a>
                 </li>
-                <li><a href="berita.html">Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha</a></li>
+                <li><a href="berita.html">Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha</a>
+                </li>
                 <li><a href="berita.html">Kunjungan SMKN 1 Sorong Papua</a></li>
                 <li style="margin-bottom: 25px;"><a href="berita.html">“CAREER DAY” SMK Sains Pertiwi</a></li>
-                <li style="list-style-type:none; margin-left: -20px;"><a href="berita.html"><b>Lihat semua berita SMK Sains
+                <li style="list-style-type:none; margin-left: -20px;"><a href="berita.html"><b>Lihat semua berita SMK
+                            Sains
                             Pertiwi <i class="fa-solid fa-circle-arrow-right"></i></b></a></li>
             </ul>
         </div>
@@ -143,8 +152,8 @@
     <div class="row row-visi section-light">
         <div class="img-bottom">
             <div class="div-wrapper">
-                <img
-                    src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.webp" alt="Murid SMK Sains Pertiwi"/>
+                <img src="img/happy-braces-asian-student-girl-school-uniform-arm-crossed-isolated-pastel-background.webp"
+                    alt="Murid SMK Sains Pertiwi" />
             </div>
         </div>
         <div class="after-bottom block-dark" style="flex-basis: 25%; padding: 30px; margin-bottom: 20px;">
@@ -269,7 +278,8 @@
                     <p style="text-align: center; margin-bottom: 0px;">Bimbingan Konseling / Penasihat Akademik</p>
                 </div>
             </div>
-            <a href="profil.html#pendidik"><b>Lihat semua tenaga pendidik <i class="fa-solid fa-circle-arrow-right"></i></b></a>
+            <a href="profil.html#pendidik"><b>Lihat semua tenaga pendidik <i
+                        class="fa-solid fa-circle-arrow-right"></i></b></a>
         </div>
     </div>
     <div class="row section-light">
@@ -349,15 +359,17 @@
             <div class="cta-fill">
                 <h2>Pendaftaran Peserta Didik Baru segera dibuka</h2>
             </div>
-            <div class="cta-fill"><button class="button button-white" onclick="location.href='kegiatan.html#ppdb';">Lihat Informasi PPDB</button></div>
+            <div class="cta-fill"><button class="button button-white"
+                    onclick="location.href='kegiatan.html#ppdb';">Lihat Informasi PPDB</button></div>
         </div>
     </div>
     <div class="icon-bar">
-        <a href="#" class="social" style="background-color: white; padding: 5px; color: black;"><span style="font-size: 10pt;">share</span></a>
+        <a href="#" class="social" style="background-color: white; padding: 5px; color: black;"><span
+                style="font-size: 10pt;">share</span></a>
         <a href="#" class="social" target="_blank" id="facebook"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="#" class="social" target="_blank" id="twitter"><i class="fa-brands fa-twitter"></i></a>
         <a href="#" class="social" target="_blank" id="whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
-      </div>
+    </div>
     <div class="row footer">
         <div style="flex-basis: 30%;">
             <img src="img/web-logo-white.webp" alt="Logo SMK Sains Pertiwi" width="60px">
@@ -394,7 +406,8 @@
             </ul>
         </div>
         <div style="flex-basis: 100%;">
-            <p style="text-align: center;">Dibuat oleh <a href="kelompok1.html" style="color: #F18F01;">Kelompok 1</a> Web Programming Kelas 12.2B.31.</p>
+            <p style="text-align: center;">Dibuat oleh <a href="kelompok1.html" style="color: #F18F01;">Kelompok 1</a>
+                Web Programming Kelas 12.2B.31.</p>
         </div>
     </div>
 </body>
